updated inline-block whitespace fix

--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -54,7 +54,7 @@
     /* 2 */
     text-align: center;
     /* 3 */
-    font-size: 0.01px;
+    font-size: 0.001px;
 }
 
 /*
